--- a/checkpoints.ipynb
+++ b/checkpoints.ipynb
@@ -43,7 +43,7 @@
         "\n",
         "\n",
         "# reading features list\n",
-        "with open(\"/content/kddcup.names\", 'r') as f:\n",
+        "with open(\"/kddcup.names\", 'r') as f:\n",
         "  print(\"read feature list\")"
       ]
     },
@@ -167,7 +167,7 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "path = \"/content/kddcup.data_10_percent.gz\"\n",
+        "path = \"/kddcup.data_10_percent.gz\"\n",
         "df = pd.read_csv(path, names = columns)\n",
         "  \n",
         "# Adding Attack Type column\n",
